--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=8889
-DB_DATABASE=database_es_team
+DB_DATABASE=prova_auth
 DB_USERNAME=root
 DB_PASSWORD=root
 
